--- a/public/index.html
+++ b/public/index.html
@@ -46,4 +46,6 @@
     crossorigin="anonymous"></script>
 </body>
 
+<script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
+
 </html>
